--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-ftp-deploy": "^0.1.7",
     "grunt-sync": "^0.2.0",
     "install": "^0.1.7",
     "npm": "^2.0.0"
